GNOME Bugzilla – Bug 680890
user-panel: Fix memory leak of UmRealmManager
Last modified: 2012-09-17 08:38:36 UTC
Fix memory leak of UmRealmManager
Created attachment 219956 [details] [review] user-panel: Fix memory leak of UmRealmManager
Review of attachment 219956 [details] [review]: looks right
Review of attachment 219956 [details] [review]: This doesn't apply anymore, is it still needed?
No longer needed. The loading of realm objects is handled by using GDBusObjectManagerClient.