user-panel: Fix memory leak of UmRealmManager

https://bugzilla.gnome.org/show_bug.cgi?id=680890